# SocketMock

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/scripts/: update_coverage_badge.py
.github/workflows/: gitleaks.yml  quality.yml
SocketMock/: admin.py  app.py  pdu.py  server.py  stubs.py
SocketMock/examples/: client.py
SocketMock/plugins/: __init__.py  base.py
SocketMock/plugins/_template/: plugin.py  stubs.py
SocketMock/plugins/sftp/: __init__.py  plugin.py  session.py
SocketMock/plugins/smpp/: codec.py  plugin.py  session.py
SocketMock/plugins/socketmock/: __init__.py  stubs.py
SocketMock/static/: app.js  index.html
libs/stubs/: __init__.py  stubs.py
socketmock/: admin.py  app.py  server.py
socketmock/examples/: client.py
socketmock/plugins/: __init__.py  base.py
socketmock/plugins/_template/: __init__.py  codec.py  plugin.py  session.py
socketmock/plugins/hl7v2/: __init__.py  codec.py  plugin.py  session.py
socketmock/plugins/imap/: __init__.py  codec.py  plugin.py  session.py
socketmock/plugins/iso8583/: __init__.py  codec.py  plugin.py  session.py
socketmock/plugins/pop3/: __init__.py  codec.py  plugin.py  session.py
socketmock/plugins/sftp/: codec.py  plugin.py  session.py  stubs.py
socketmock/plugins/smpp/: __init__.py  session.py  stubs.py
socketmock/plugins/smtp/: __init__.py  codec.py  plugin.py  session.py
socketmock/static/: app.css
tests/: test_protocols.py
tests/plugins/: _helpers.py  test_plugin_discovery.py  test_plugin_factories.py  test_stubs.py
(+51 files in other folders)
