[project]
name = "SocketMock"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff", "ty>=0.0.58"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["SocketMock"]
branch = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

