[project]
name = "socketmock"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff",
    "ty>=0.0.58",
    "hl7apy>=1.3.5",
    "pyx12>=4.0.0",
    "smpplib>=2.2.4",
    "iso8583>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["socketmock"]
branch = true
omit = [
    "socketmock/admin.py",
    "socketmock/app.py",
    "socketmock/plugins/_template/*",
    "socketmock/examples/*",
]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

